# TrieAdventure

./: .gitignore  CMakeLists.txt  README.md  liltrie.h  main-lta.cpp  main.cpp  random220.h  statistics.cpp  statisticstrie.hpp  tests.cpp  trie.hpp
child_histogram/: words1024.txt  words256.txt  words512.txt
docs/: trie_adventure_prompt.tex
nodes/: bitmask.hpp  deep.hpp  node.hpp  statistics.hpp  utility.hpp
output/child_histogram/: dictionary256.txt
randomization/: liltrie.h
test_node_functions/: dictionary16.txt  dictionary256.txt  dictionary8.txt  words1024.txt  words128.txt  words16.txt  words256.txt  words32.txt  words512.txt  words64.txt  words8.txt
tests/: statistics_tests.cpp  system_tests.cpp
tries/: statisticstrie.hpp  trie.hpp
